# caffe-cpp-example

./: .gitignore  CMakeLists.txt  ODCNNTrainer.cpp  ODCNNTrainer.h  ODCNNTrainerTest.cpp  README.md
data/: README.md
include/: ODCNNTrainer.h
prototxt/: ex_model.prototxt  ex_solver.prototxt
src/: CMakeLists.txt  ODCNNTrainer.cpp  ODCNNTrainer.h  ODCNNTrainerTest.cpp
